# aiwriter

./: .env.example  .gitignore  README.md  build_index.py  config.toml.example  index.html  posts.json  pyproject.toml
.github/workflows/: check-ip.yml  fill-images.yml  wechat-dedup-drafts.yml  wechat-publish.yml  wechat-sync-v2.yml  wechat-sync.yml
aiwriter/: cli.py  config.py  models.py  pipeline.py  wechat.py  wechat_theme.py
aiwriter/research/: scraper.py  searcher.py
docs/: token-optimization.md  wechat-sync-setup.md
posts/2026-04-04/万亿赌注-OpenAI千亿融资AI正在吞噬风险投资/: article.html
posts/2026-04-04/最讽刺的一幕-警告AI会黑掉你的公司-结果Anthropic先黑了自己/: article.html  article.md
posts/2026-04-05/你以为AI裁员是狼来了-其实狼已经坐在你隔壁/: article.html  article.md
posts/2026-04-06/从-比赛降价-到-一起涨456-这才是中国AI终于活了的证明/: article.html  article.md
posts/2026-04-08/你给AI的记忆越多-它就越危险/: article.html  article.md
posts/2026-04-09/AI耗电堪比一个国家-但他们用34分钟解决了这个问题/: article.html  article.md
posts/2026-04-10/史上最疯狂一个季度-AI一口吞掉全球80-风险投资-而其他创业公司正在慢速窒息/: article.html  article.md
posts/2026-04-11/它越狱了-但Anthropic没打算放它出来-那个发现数千零日漏洞的AI-以及玻璃翼悖论/: article.html  article.md
skills/: aiwriter-research.md  aiwriter-review.md  aiwriter.md  wechat-sync.md
skills/scripts/: download_image.py  fill_images.py  generate_image.py  html_to_png.js  md_to_html.py  render_charts_png.py  render_illustration.py  setup_vault.py  slugify.py  sync_drafts.py  update_wechat_draft_images.py
skills/templates/: article.html  diagram-spec.md  expert-voices.md  illustration-spec.md  quotas.md  review-cuts.md  three-gates.md  writer-personas.md
(+304 files in other folders)
